--- a/On the Map Tourist/StoryBoards/Base.lproj/Main.storyboard
+++ b/On the Map Tourist/StoryBoards/Base.lproj/Main.storyboard
@@ -81,12 +81,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="fT2-1i-F2Z">
-                                <rect key="frame" x="0.0" y="88" width="414" height="128"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="vNd-f7-i4g"/>
-                                </constraints>
-                            </mapView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S8x-an-VAT">
                                 <rect key="frame" x="0.0" y="818" width="414" height="44"/>
                                 <constraints>
@@ -103,11 +97,8 @@
                                 </items>
                             </toolbar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wvf-UA-7aX">
-                                <rect key="frame" x="0.0" y="216" width="414" height="602"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="730"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="602" id="kHT-y9-TaS"/>
-                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jrw-0b-9Xl">
                                     <size key="itemSize" width="120" height="120"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -166,27 +157,75 @@
                             <constraint firstItem="S8x-an-VAT" firstAttribute="trailing" secondItem="0oe-hJ-Rxn" secondAttribute="trailing" id="0c9-q5-63y"/>
                             <constraint firstItem="wvf-UA-7aX" firstAttribute="trailing" secondItem="0oe-hJ-Rxn" secondAttribute="trailing" id="5Li-yP-Nje"/>
                             <constraint firstItem="S8x-an-VAT" firstAttribute="leading" secondItem="0oe-hJ-Rxn" secondAttribute="leading" id="Ae8-ME-F8w"/>
-                            <constraint firstItem="wvf-UA-7aX" firstAttribute="top" secondItem="fT2-1i-F2Z" secondAttribute="bottom" id="EdG-ei-4rS"/>
                             <constraint firstItem="wvf-UA-7aX" firstAttribute="bottom" secondItem="S8x-an-VAT" secondAttribute="top" id="Mbg-ww-o8d"/>
                             <constraint firstItem="S8x-an-VAT" firstAttribute="bottom" secondItem="0oe-hJ-Rxn" secondAttribute="bottom" id="MhD-de-oOt"/>
-                            <constraint firstItem="fT2-1i-F2Z" firstAttribute="top" secondItem="0oe-hJ-Rxn" secondAttribute="top" id="Mk7-ML-522"/>
-                            <constraint firstItem="fT2-1i-F2Z" firstAttribute="leading" secondItem="0oe-hJ-Rxn" secondAttribute="leading" id="Qdv-f2-C1K"/>
+                            <constraint firstItem="wvf-UA-7aX" firstAttribute="top" secondItem="S8x-an-VAT" secondAttribute="top" constant="-730" id="QI6-XM-Tei"/>
                             <constraint firstItem="wvf-UA-7aX" firstAttribute="leading" secondItem="0oe-hJ-Rxn" secondAttribute="leading" id="WVU-hk-ua0"/>
-                            <constraint firstItem="fT2-1i-F2Z" firstAttribute="trailing" secondItem="0oe-hJ-Rxn" secondAttribute="trailing" id="knE-Xy-Ujd"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="0oe-hJ-Rxn"/>
                     </view>
-                    <navigationItem key="navigationItem" id="RO3-FK-BIY"/>
+                    <navigationItem key="navigationItem" id="RO3-FK-BIY">
+                        <barButtonItem key="rightBarButtonItem" image="like_black-50" id="GqB-mu-Fu0">
+                            <connections>
+                                <segue destination="BqX-Rf-X5C" kind="show" identifier="showFavoritePhotos" id="c2G-Di-cWB"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="wvf-UA-7aX" id="E33-bf-Djk"/>
                         <outlet property="flowLayout" destination="jrw-0b-9Xl" id="Cla-bv-bXq"/>
                         <outlet property="loadNewImagesButton" destination="KAO-B3-mTN" id="qPo-2g-UJU"/>
-                        <outlet property="mapView" destination="fT2-1i-F2Z" id="uhO-rD-Cmn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="URh-U4-KTu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1999" y="133"/>
+            <point key="canvasLocation" x="1998.5507246376812" y="132.58928571428572"/>
+        </scene>
+        <!--Favorite Photos View Controller-->
+        <scene sceneID="MKh-hT-GNd">
+            <objects>
+                <collectionViewController storyboardIdentifier="likePhotosVC" id="BqX-Rf-X5C" customClass="FavoritePhotosViewController" customModule="On_the_Map_Tourist" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="N1Z-g5-d2r">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mD6-B9-U3u">
+                            <size key="itemSize" width="120" height="126"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="likedPhotoCell" id="RKR-wb-YHU" customClass="FavPhotoCell" customModule="On_the_Map_Tourist" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="120" height="126"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="120" height="126"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JUq-JO-Ld4">
+                                            <rect key="frame" x="0.0" y="0.0" width="120" height="126"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                    </subviews>
+                                </view>
+                                <connections>
+                                    <outlet property="imageView" destination="JUq-JO-Ld4" id="adS-mH-0BM"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="BqX-Rf-X5C" id="Knq-um-6IW"/>
+                            <outlet property="delegate" destination="BqX-Rf-X5C" id="lRm-11-p7a"/>
+                        </connections>
+                    </collectionView>
+                    <connections>
+                        <outlet property="favPhotosFlowLayout" destination="mD6-B9-U3u" id="Ujh-DF-vBr"/>
+                    </connections>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VHV-cN-eaX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2769.5652173913045" y="-268.52678571428572"/>
         </scene>
         <!--Share Photo View Controller-->
         <scene sceneID="Jay-ir-lij">
@@ -241,7 +280,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xwO-ca-QV0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2871.0144927536235" y="132.58928571428572"/>
+            <point key="canvasLocation" x="2771" y="483"/>
         </scene>
     </scenes>
     <resources>
