enh: Enhanced the image download
	- The app will download small sized imaged instead of Medium Size.

--- a/On the Map Tourist/StoryBoards/Base.lproj/Main.storyboard
+++ b/On the Map Tourist/StoryBoards/Base.lproj/Main.storyboard
@@ -117,7 +117,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qsi-do-SVH">
+                                                <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qsi-do-SVH">
                                                     <rect key="frame" x="80" y="80" width="40" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="40" id="hfp-d8-2I0"/>
